# renomear_pdf_com_nome_contido_no_texto_do_pdf

./: .gitignore  pyproject.toml
renomear_pdf_com_nome_contido_no_texto_do_pdf/: main.py
tests/: test_renomear_pdf_com_nome_contido_no_texto_do_pdf.py
